Atualizações no html e css para dar mais robustez ao site, houve também uma alteração de imagens dos produtos

--- a/main-page.html
+++ b/main-page.html
@@ -20,11 +20,9 @@
         </div>
         <!-- Menu de navegação -->
         <nav class="nav-menu">
-            <a href="#" class="nav-link">Início</a>
-            <a href="#" class="nav-link">Relógios Masculinos</a>
-            <a href="#" class="nav-link">Relógios Femininos</a>
-            <a href="#" class="nav-link">Luxo Acessível</a>
-            <a href="#" class="nav-link">Sobre Nós</a>
+<!--            <a href="#" class="nav-link">Início</a>-->
+<!--            <a href="#" class="nav-link">Relógios Masculinos</a>-->
+<!--            <a href="#" class="nav-link">Relógios Femininos</a>-->
         </nav>
         <!-- Barra de pesquisa -->
         <div class="search-cart">
@@ -45,56 +43,222 @@
         <a href="#products" class="btn-primary">Explorar Coleção</a>
     </section>
 
-    <!-- Seção de grid de produtos  -->
-    <section id="products" class="container products-section">
+    <!-- Seção de grid de produtos premium -->
+    <section id="premium-products" class="container products-section">
         <h2 class="section-title">Nossa Seleção Premium</h2>
         <div class="products-grid">
             <!-- Produto 1 -->
             <div class="product-card">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Elegant black leather strap men's watch with silver dial and gold accents, minimalist design for luxury and everyday style" class="product-image">
+                <a href="#" class="open-product-page">
+                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Elegant black leather strap men's watch with silver dial and gold accents, minimalist design for luxury and everyday style" class="product-image">
+                </a>
                 <div class="product-info">
-                    <h3 class="product-title">Relógio Masculino Clássico</h3>
-                    <p class="product-category">Luxo Acessível</p>
-                    <p class="product-description">Design sofisticado com pulseira de couro preto e detalhes em ouro.</p>
-                    <span class="product-price">R$ 450,00</span>
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Masculino Clássico</h3>
+                        <p class="product-category">Luxo Acessível</p>
+                        <p class="product-description">Design sofisticado com pulseira de couro preto e detalhes em ouro.</p>
+                        <span class="product-price">R$ 250,00</span>
+                    </a>
                     <button class="btn-add-cart">Adicionar ao Carrinho</button>
                 </div>
             </div>
             <!-- Produto 2 -->
             <div class="product-card">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6f4c48d0-cf47-4c79-a105-f2d488813518.png" alt="Stylish rose gold women's watch with white dial, crystal embellishments, and slim leather strap for feminine elegance and affordable luxury" class="product-image">
+                <a href="#" class="open-product-page">
+                <img src="images/relogio_feminino_pulseira_de_aco_inoxidavel_importado_de_luxo_criativo_unico_relogio_retangulo_para__1585_4_67fdaa8a0f941b11825d9cd1465c980f.webp" alt="Stylish rose gold women's watch with white dial, crystal embellishments, and slim leather strap for feminine elegance and affordable luxury" class="product-image">
+                </a>
                 <div class="product-info">
-                    <h3 class="product-title">Relógio Feminino Elegante</h3>
-                    <p class="product-category">Estilo Moderna</p>
-                    <p class="product-description">Pulseira fina em couro rosa e mostrador brilhante.</p>
-                    <span class="product-price">R$ 380,00</span>
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Feminino Elegante</h3>
+                        <p class="product-category">Estilo Moderna</p>
+                        <p class="product-description">Pulseira fina em couro rosa e mostrador brilhante.</p>
+                        <span class="product-price">R$ 280,00</span>
+                    </a>
                     <button class="btn-add-cart">Adicionar ao Carrinho</button>
                 </div>
             </div>
             <!-- Produto 3 -->
             <div class="product-card">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/69ee90a9-024e-4879-b8f2-d234cc85e226.png" alt="Premium aviator-style men's chronograph watch with black leather strap, stainless steel case, and multiple subdials for sporty luxury look" class="product-image">
+                <a href="#" class="open-product-page">
+                <img src="images/d15f25c7c7f2e0e9838cd307af53d1d3-a929d2b50f12c83ab117272652874756-480-0.webp" alt="Premium aviator-style men's chronograph watch with black leather strap, stainless steel case, and multiple subdials for sporty luxury look" class="product-image">
+                </a>
                 <div class="product-info">
-                    <h3 class="product-title">Relógio Sport Luxo</h3>
-                    <p class="product-category">Aventura e Estilo</p>
-                    <p class="product-description">Cronógrafo resistente com caixa em aço inox.</p>
-                    <span class="product-price">R$ 620,00</span>
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Sport Luxo</h3>
+                        <p class="product-category">Aventura e Estilo</p>
+                        <p class="product-description">Cronógrafo resistente com caixa em aço inox.</p>
+                        <span class="product-price">R$ 320,00</span>
+                    </a>
                     <button class="btn-add-cart">Adicionar ao Carrinho</button>
                 </div>
             </div>
             <!-- Produto 4 -->
             <div class="product-card">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ec31f58c-0c7a-431a-a3c8-6b019a4f9386.png" alt="Delicate silver-bracelet women's watch with minimalist dial, small diamonds accents, and chain strap for classic feminine luxury" class="product-image">
+                <a href="#" class="open-product-page">
+                <img src="images/relogio-feminino-dourado-c--branco-linha-premium-1758541165.2992.webp" alt="Delicate silver-bracelet women's watch with minimalist dial, small diamonds accents, and chain strap for classic feminine luxury" class="product-image">
+                </a>
                 <div class="product-info">
+                    <a href="#" class="open-product-page">
                     <h3 class="product-title">Relógio Branco Dourado</h3>
                     <p class="product-category">Elegância Clássica</p>
                     <p class="product-description">Pulseira fina e detalhes discretos em cristal.</p>
-                    <span class="product-price">R$ 520,00</span>
+                    <span class="product-price">R$ 400,00</span>
+                    </a>
                     <button class="btn-add-cart">Adicionar ao Carrinho</button>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Seção de grid de produtos mais comprados -->
+    <section id="more-products" class="container products-section">
+        <h2 class="section-title">Relógios mais vendidos</h2>
+        <div class="products-grid">
+            <!-- Produto 1 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Elegant black leather strap men's watch with silver dial and gold accents, minimalist design for luxury and everyday style" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Masculino Clássico</h3>
+                        <p class="product-category">Luxo Acessível</p>
+                        <p class="product-description">Design sofisticado com pulseira de couro preto e detalhes em ouro.</p>
+                        <span class="product-price">R$ 250,00</span>
+                        <p></p>
+                        <span class="quantity"> +1mil de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 2 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/relogio_feminino_pulseira_de_aco_inoxidavel_importado_de_luxo_criativo_unico_relogio_retangulo_para__1585_4_67fdaa8a0f941b11825d9cd1465c980f.webp" alt="Stylish rose gold women's watch with white dial, crystal embellishments, and slim leather strap for feminine elegance and affordable luxury" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Feminino Elegante</h3>
+                        <p class="product-category">Estilo Moderna</p>
+                        <p class="product-description">Pulseira fina em couro rosa e mostrador brilhante.</p>
+                        <span class="product-price">R$ 280,00</span>
+                        <p></p>
+                        <span class="quantity"> +500 de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 3 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/d15f25c7c7f2e0e9838cd307af53d1d3-a929d2b50f12c83ab117272652874756-480-0.webp" alt="Premium aviator-style men's chronograph watch with black leather strap, stainless steel case, and multiple subdials for sporty luxury look" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Sport Luxo</h3>
+                        <p class="product-category">Aventura e Estilo</p>
+                        <p class="product-description">Cronógrafo resistente com caixa em aço inox.</p>
+                        <span class="product-price">R$ 320,00</span>
+                        <p></p>
+                        <span class="quantity"> +1,5mil de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 4 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/relogio-feminino-dourado-c--branco-linha-premium-1758541165.2992.webp" alt="Delicate silver-bracelet women's watch with minimalist dial, small diamonds accents, and chain strap for classic feminine luxury" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Branco Dourado</h3>
+                        <p class="product-category">Elegância Clássica</p>
+                        <p class="product-description">Pulseira fina e detalhes discretos em cristal.</p>
+                        <span class="product-price">R$ 400,00</span>
+                        <p></p>
+                        <span class="quantity"> +300 de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+        </div>
+        <p></p>
+        <div class="products-grid">
+            <!-- Produto 1 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Elegant black leather strap men's watch with silver dial and gold accents, minimalist design for luxury and everyday style" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Masculino Clássico</h3>
+                        <p class="product-category">Luxo Acessível</p>
+                        <p class="product-description">Design sofisticado com pulseira de couro preto e detalhes em ouro.</p>
+                        <span class="product-price">R$ 250,00</span>
+                        <p></p>
+                        <span class="quantity"> +1mil de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 2 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/relogio_feminino_pulseira_de_aco_inoxidavel_importado_de_luxo_criativo_unico_relogio_retangulo_para__1585_4_67fdaa8a0f941b11825d9cd1465c980f.webp" alt="Stylish rose gold women's watch with white dial, crystal embellishments, and slim leather strap for feminine elegance and affordable luxury" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Feminino Elegante</h3>
+                        <p class="product-category">Estilo Moderna</p>
+                        <p class="product-description">Pulseira fina em couro rosa e mostrador brilhante.</p>
+                        <span class="product-price">R$ 280,00</span>
+                        <p></p>
+                        <span class="quantity"> +500 de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 3 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/d15f25c7c7f2e0e9838cd307af53d1d3-a929d2b50f12c83ab117272652874756-480-0.webp" alt="Premium aviator-style men's chronograph watch with black leather strap, stainless steel case, and multiple subdials for sporty luxury look" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Sport Luxo</h3>
+                        <p class="product-category">Aventura e Estilo</p>
+                        <p class="product-description">Cronógrafo resistente com caixa em aço inox.</p>
+                        <span class="product-price">R$ 320,00</span>
+                        <p></p>
+                        <span class="quantity"> +1,5mil de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+            </div>
+            <!-- Produto 4 -->
+            <div class="product-card">
+                <a href="#" class="open-product-page">
+                    <img src="images/relogio-feminino-dourado-c--branco-linha-premium-1758541165.2992.webp" alt="Delicate silver-bracelet women's watch with minimalist dial, small diamonds accents, and chain strap for classic feminine luxury" class="product-image">
+                </a>
+                <div class="product-info">
+                    <a href="#" class="open-product-page">
+                        <h3 class="product-title">Relógio Branco Dourado</h3>
+                        <p class="product-category">Elegância Clássica</p>
+                        <p class="product-description">Pulseira fina e detalhes discretos em cristal.</p>
+                        <span class="product-price">R$ 400,00</span>
+                        <p></p>
+                        <span class="quantity"> +300 de unidades vendidas</span>
+                    </a>
+                    <button class="btn-add-cart">Adicionar ao Carrinho</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
 </main>
 
 <!-- Seção do rodapé -->
