--- a/main-page.html
+++ b/main-page.html
@@ -27,7 +27,7 @@
         <!-- Barra de pesquisa -->
         <div class="search-cart">
             <input type="text" placeholder="Buscar relógios..." class="search-input">
-            <a href="#" class="cart-icon">
+            <a href="cart.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
