Adicionando o id dos produtos

--- a/main-page.html
+++ b/main-page.html
@@ -186,7 +186,7 @@
         <p></p>
         <div class="products-grid">
             <!-- Produto 1 -->
-            <div class="product-card">
+            <div class="product-card" id="product-1">
                 <a href="#" class="open-product-page">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Elegant black leather strap men's watch with silver dial and gold accents, minimalist design for luxury and everyday style" class="product-image">
                 </a>
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <!-- Produto 2 -->
-            <div class="product-card">
+            <div class="product-card" id="product-2">
                 <a href="#" class="open-product-page">
                     <img src="images/relogio_feminino_pulseira_de_aco_inoxidavel_importado_de_luxo_criativo_unico_relogio_retangulo_para__1585_4_67fdaa8a0f941b11825d9cd1465c980f.webp" alt="Stylish rose gold women's watch with white dial, crystal embellishments, and slim leather strap for feminine elegance and affordable luxury" class="product-image">
                 </a>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <!-- Produto 3 -->
-            <div class="product-card">
+            <div class="product-card" id="product-3">
                 <a href="#" class="open-product-page">
                     <img src="images/d15f25c7c7f2e0e9838cd307af53d1d3-a929d2b50f12c83ab117272652874756-480-0.webp" alt="Premium aviator-style men's chronograph watch with black leather strap, stainless steel case, and multiple subdials for sporty luxury look" class="product-image">
                 </a>
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <!-- Produto 4 -->
-            <div class="product-card">
+            <div class="product-card" id="product-4">
                 <a href="#" class="open-product-page">
                     <img src="images/relogio-feminino-dourado-c--branco-linha-premium-1758541165.2992.webp" alt="Delicate silver-bracelet women's watch with minimalist dial, small diamonds accents, and chain strap for classic feminine luxury" class="product-image">
                 </a>
