Retirando linhas desnecessárias

--- a/cart.html
+++ b/cart.html
@@ -23,6 +23,9 @@
   <main class="container products-section" style="padding:2rem 1rem;">
     <h2 class="section-title">Seu Carrinho</h2>
 
+    <div id="cart-details">
+      </div>
+
     <div class="cart-actions">
       <a href="main-page.html" class="btn-primary btn-back">Continuar comprando</a>
       <button id="clear-cart" class="btn-secondary">Limpar Carrinho</button>
