corrigindo nomeclatura de arquivo do css mo link do HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Watch House - Luxo Acessível para Relógios</title>
     <meta name="description" content="Descubra relógios de estilo e luxo ao alcance da classe média. Explore nossa coleção premium em Watch House."/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
-    <link rel="stylesheet" href="css/main-page.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 
 <body class="body">
@@ -30,7 +30,7 @@
     <section class="hero-bg hero-section">
         <h1 class="hero-title">Bem-vindo ao Watch House</h1>
         <p class="hero-subtitle">Estilo e luxo ao alcance da classe média. Descubra relógios que combinam elegância e acessibilidade.</p>
-        <a href="#products" class="btn-primary">Explorar Coleção</a>
+        <a href="#premium-products" class="btn-primary">Explorar Coleção</a>
     </section>
 
     <section id="premium-products" class="container products-section">
