--- a/cart.html
+++ b/cart.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Carrinho - Watch House</title>
-    <meta name="description" content="Seu carrinho de compras na Watch House."/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/cart.css"/>
 </head>
-
 <body class="body">
 
 <header class="header-bg-image hero-bg text-white shadow-lg relative">
     <div class="container header-nav">
-        <a href="main-page.html" class="logo-emoji-free" style="text-decoration: none;">Watch House</a>
+        <a href="index.html" class="logo-emoji-free" style="text-decoration: none;">Watch House</a>
         <div class="search-cart">
-            <input type="text" placeholder="Buscar relógios..." class="search-input">
             <a href="cart.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
@@ -24,64 +21,13 @@
     </div>
 </header>
 
-<main class="container cart-section">
+<main class="container cart-page">
     <h1>Meu Carrinho</h1>
-
     <div class="cart-layout">
-        <div class="cart-items">
-            <div class="cart-item">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/08095e87-53b4-4246-8ccf-9400bb1deb2b.png" alt="Relógio Masculino Clássico" class="item-image">
-                <div class="item-details">
-                    <h3 class="item-name">Relógio Masculino Clássico</h3>
-                    <p class="item-category">Luxo Acessível</p>
-                    <p class="item-price">R$ 250,00</p>
-                </div>
-                <div class="item-quantity">
-                    <button class="quantity-btn">-</button>
-                    <input type="number" value="1" min="1" class="quantity-input">
-                    <button class="quantity-btn">+</button>
-                </div>
-                <p class="item-total-price">R$ 250,00</p>
-                <button class="remove-item-btn"><i class="fas fa-trash"></i></button>
-            </div>
-
-            <div class="cart-item">
-                <img src="images/d15f25c7c7f2e0e9838cd307af53d1d3-a929d2b50f12c83ab117272652874756-480-0.webp" alt="Relógio Sport Luxo" class="item-image">
-                <div class="item-details">
-                    <h3 class="item-name">Relógio Sport Luxo</h3>
-                    <p class="item-category">Aventura e Estilo</p>
-                    <p class="item-price">R$ 320,00</p>
-                </div>
-                <div class="item-quantity">
-                    <button class="quantity-btn">-</button>
-                    <input type="number" value="2" min="1" class="quantity-input">
-                    <button class="quantity-btn">+</button>
-                </div>
-                <p class="item-total-price">R$ 640,00</p>
-                <button class="remove-item-btn"><i class="fas fa-trash"></i></button>
-            </div>
-
-             </div>
-
-        <div class="order-summary">
-            <h2>Resumo do Pedido</h2>
-            <div class="summary-row">
-                <span>Subtotal (2 itens)</span>
-                <span>R$ 890,00</span>
-            </div>
-            <div class="summary-row">
-                <span>Frete</span>
-                <span>Grátis</span>
-            </div>
-            <div class="summary-total">
-                <span>Total</span>
-                <span>R$ 890,00</span>
-            </div>
-            <button class="btn-checkout">Finalizar Compra</button>
-        </div>
+        <div class="cart-items-list"></div>
+        <div class="order-summary-box"></div>
     </div>
 </main>
-
 
 <footer class="hero-bg footer">
     <div class="container footer-content">
@@ -96,9 +42,9 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>© 2025 Watch House. Todos os direitos reservados.</p>
+        <p>© 2023 Watch House. Todos os direitos reservados.</p>
     </div>
 </footer>
 
-</body>
+<script src="js/products.js"></script> <script src="js/cart.js"></script>     </body>
 </html>
