Criando botão de continuar comprando e adicionando funcionalidades de excluir produto do carrinho

--- a/cart.html
+++ b/cart.html
@@ -46,5 +46,7 @@
     </div>
 </footer>
 
-<script src="js/products.js"></script> <script src="js/cart.js"></script>     </body>
+<script src="js/products.js"></script> 
+<script src="js/cart.js"></script>
+     
 </html>
