--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,6 @@
     </div>
 </footer>
 
-<script src="js/products.js"></script> 
-<script src="js/cart.js"></script>
+<script type="module" src="js/cart.js"></script>
      
 </html>
