--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="logo-emoji-free">
             Watch House
         </div>
-        <nav class="nav-menu">
-</nav>
+        <nav class="nav-menu"></nav>
         <div class="search-cart">
             <input type="text" placeholder="Buscar relógios..." class="search-input">
             <a href="cart.html" class="cart-icon">
@@ -51,21 +50,13 @@
             <h3>Watch House</h3>
             <p>Luxo ao alcance. Qualidade e estilo para todos.</p>
         </div>
-        <div class="footer-links">
-            <a href="#" class="footer-link">Contato</a>
-            <a href="#" class="footer-link">Política de Privacidade</a>
-            <a href="#" class="footer-link">Termos de Uso</a>
-            <a href="#" class="footer-link"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="footer-link"><i class="fab fa-instagram"></i></a>
-        </div>
     </div>
     <div class="footer-bottom">
         <p>© 2023 Watch House. Todos os direitos reservados.</p>
     </div>
 </footer>
 
-<script src="js/products.js"></script> 
-<script src="js/main.js"></script>  
+<script type="module" src="js/main.js"></script>
 
 </body>
 </html>
